--- a/Curso C# udemy/APP_CadastroSeries/DIO.Series/.vscode/launch.json
+++ b/Curso C# udemy/APP_CadastroSeries/DIO.Series/.vscode/launch.json
@@ -14,13 +14,15 @@
             "args": [],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-            "console": "internalConsole",
-            "stopAtEntry": false
+            "console": "externalTerminal",
+            "stopAtEntry": false,
+            "internalConsoleOptions": "openOnFirstSessionStart"
         },
         {
             "name": ".NET Core Attach",
             "type": "coreclr",
-            "request": "attach"
+            "request": "attach",
+            "processId": "${command:pickProcess}"
         }
     ]
 }
