--- a/Curso C# udemy/ExercicioManipulacaoArquivosA192/ExercicioManipulacaoArquivosA192/ExercicioManipulacaoArquivosA192.csproj
+++ b/Curso C# udemy/ExercicioManipulacaoArquivosA192/ExercicioManipulacaoArquivosA192/ExercicioManipulacaoArquivosA192.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Grpc.Core" Version="2.41.1" />
+  </ItemGroup>
+
 </Project>
