--- a/Curso C# udemy/ExercicioManipulacaoArquivosA192/ExercicioManipulacaoArquivosA192/ExercicioManipulacaoArquivosA192.csproj
+++ b/Curso C# udemy/ExercicioManipulacaoArquivosA192/ExercicioManipulacaoArquivosA192/ExercicioManipulacaoArquivosA192.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.Core" Version="2.41.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
